# PUGG

./: .dockerignore  .gitignore  .gitlab-ci.yml  README.md  dvc.yaml  params.yaml  pyproject.toml
baselines/: defaults.py
baselines/ir/: README.md
baselines/ir/scripts/: evaluate_bm25.py  evaluate_dense_retriever_with_reranker.py  evaluate_monot5_reranker.py  evaluate_reranker.py  evaluate_retriever.py
baselines/kbqa/: data.py  gpt_config_knowledge.yaml  gpt_config_noknowledge.yaml  predictor.py  subgraph_retriever.py
baselines/kbqa/notebooks/: 1_subgraph_analysis.ipynb  2_.ipynb
baselines/kbqa/scripts/: embed.py  evaluate.py  predict.py  retrieve_subgraphs.py
baselines/mrc/: README.md  eval_extractive.sh  eval_generative.sh
baselines/mrc/hf_qa/: qa_eval_extractive.py  qa_eval_generative.py  trainer_qa.py  trainer_seq2seq_qa.py  utils_qa.py
data/baselines/ir/: BM25_reranker_herbert-base-reranker-msmarco  BM25_reranker_polish-reranker-base-ranknet  Dense_retriever_multilingual-e5-large_reranker_polish-reranker-large-ranknet  retriever_mmlw-retrieval-roberta-large  retriever_multilingual-e5-base  retriever_silver-retriever-base-v1.1
data/baselines/kbqa/: .gitignore  properties.csv.dvc
data/datasets/huggingface/: .gitignore
data/datasets/ir_dataset/: .gitignore
data/datasets/mrc_dataset/: .gitignore
data/wikidata/graphs/: .gitignore
docker/reranker/: Dockerfile  run_reranker.sh
docker/search_results_acquisition_runner/: crontab-schedule  dockerfile
gqqd/: defaults.py
gqqd/api/: search_results_client.py  suggestion_client.py  wikidata.py  wikipedia_content_client.py  wikipedia_entity_linking.py
gqqd/api/utils/: association_lookup_utils.py  entity_linking_utils.py
gqqd/auto_annotation/: chatgpt_annotator.py  quote_chatgpt_config.yaml
gqqd/data/: datasets_loaders.py  deduplicator.py  final.py  inforex.py  loaders.py  postprocessor.py
gqqd/data/scripts/: run_prefix_extraction_ntokens_for_annotation.py  run_prefix_ntokens_reduction.py
gqqd/pipeline/: passage_retrieval.py  prefix_extractors.py  question_filtering.py
gqqd/pipeline/output/: data.py
gqqd/pipeline/scripts/: run_chatgpt_auto_annotation.py  run_chatgpt_responses.py  run_construction_dataset_for_annotation.py  run_context_acquisition.py  run_entity_linking.py  run_entity_linking_merge.py  run_entity_linking_verification_preparation.py  run_filter_ir_corpus.py  run_final_kbqa_construction.py  run_inforex_preparation.py  run_label_final_kbqa.py  run_split.py  (+14 more)
gqqd/utils/: excell_utils.py  utils.py
sqqd/: defaults.py
sqqd/api/: chatgpt_rephrase_client.py  sparql_question_client.py  wikidata_query_client.py
sqqd/pipeline/: data.py
tests/: test_association_lookup_utils.py  test_entity_linking_client.py  test_entity_linking_client_mock_data.py  test_entity_linking_utils.py  test_gqqd.py  test_hf_datasets.py  test_links_agreement.py  test_passages.py  test_wikipedia_link_extraction.py  test_wikipedia_text_cleaner.py
tools/dvc/: clean_dvc_lock.py
tools/huggingface/: run_hf_dataset_creation.py  run_hf_dataset_push.py  run_hf_kg_dataset_creation.py
tools/reranker/: README.md  environment.yml  rerank.py
(+101 files in other folders)
